Fix GC settings ; make SNI not required for now